--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react+webpack+webpack-dev-server+label+webpack-loader+ES6",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --history-api-fallback --hot --inline --colors --port 3000",
+    "start": "webpack-dev-server --history-api-fallback --hot --inline --colors --port 3000"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "webpack": "^3.3.0"
   },
   "devDependencies": {
@@ -33,7 +34,10 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
+    "less": "^2.7.2",
     "less-loader": "^4.0.5",
+    "postcss": "^6.0.8",
+    "postcss-loader": "^2.0.6",
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.18.2",
     "webpack-dev-server": "^2.5.1",
