--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "open-browser-webpack-plugin": "0.0.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router": "^4.1.2",
+    "react-redux": "^5.0.5",
+    "react-router": "~2.6.0",
     "react-router-dom": "^4.1.2",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "webpack": "^3.3.0"
   },
   "devDependencies": {
@@ -34,12 +38,14 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "postcss": "^6.0.8",
     "postcss-loader": "^2.0.6",
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack-dev-server": "^2.5.1",
     "webpack-hot-middleware": "^2.18.2"
   }
