--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "~2.6.0",
     "react-router-dom": "^4.1.2",
     "react-router-redux": "^4.0.8",
+    "recharts": "^1.0.0-alpha.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "webpack": "^3.3.0"
