--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "open-browser-webpack-plugin": "0.0.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-highcharts": "^12.0.0",
     "react-redux": "^5.0.5",
     "react-router": "~2.6.0",
     "react-router-dom": "^4.1.2",
