--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,12 @@
 {
     "presets": ["es2015", "stage-0", "react"],
-    "plugins": ["espower", "transform-runtime", "transform-decorators-legacy", ["antd", [{ "libraryName": "antd" }]], ["webpack-alias", {"config": "${process.cwd()}/webpack-test.config.js"}]],
+    "plugins":[
+        "espower", 
+        "transform-runtime",
+        "transform-decorators-legacy",
+        ["import", { "libraryName": "antd", "style": "true" }] ,
+        ["webpack-alias", {"config": "${process.cwd()}/webpack-test.config.js"}]
+    ],
     "env": {
         
     }
