--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "react+webpack+webpack-dev-server+label+webpack-loader+ES6",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --history-api-fallback --hot --inline --colors --port 3000"
+    "start": " webpack-dev-server --history-api-fallback --inline --hot --colors --port 3000",
+    "mock": "node --harmony ./mock/server.js",
+    "server": "json-server ./mock/db.json --port 3002",
+    "build": "rd/s/q build && set NODE_ENV=production && webpack --config ./webpack.production.config.js --progress --colors"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "antd": "^2.12.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^2.29.0",
-    "open-browser-webpack-plugin": "0.0.5",
+    "es6-promise": "^4.1.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-highcharts": "^12.0.0",
@@ -20,10 +21,9 @@
     "react-router": "~2.6.0",
     "react-router-dom": "^4.1.2",
     "react-router-redux": "^4.0.8",
-    "recharts": "^1.0.0-alpha.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "webpack": "^3.3.0"
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -33,6 +33,7 @@
     "babel-loader": "^7.1.1",
     "babel-plugin-antd": "^0.5.1",
     "babel-plugin-espower": "^2.3.2",
+    "babel-plugin-import": "^1.3.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-webpack-alias": "^2.1.2",
@@ -40,14 +41,21 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.29.0",
+    "koa": "^1.2.2",
+    "koa-body": "^1.6.0",
+    "koa-router": "^5.4.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
+    "open-browser-webpack-plugin": "0.0.5",
     "postcss": "^6.0.8",
     "postcss-loader": "^2.0.6",
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
+    "webpack": "^3.3.0",
     "webpack-dev-server": "^2.5.1",
     "webpack-hot-middleware": "^2.18.2"
   }
