--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "antd": "^2.12.1",
     "es6-promise": "^4.1.1",
+    "immutable": "^3.8.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-highcharts": "^12.0.0",
@@ -22,6 +23,7 @@
     "react-router-dom": "^4.1.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
     "redux-thunk": "^2.2.0",
     "whatwg-fetch": "^2.0.3"
   },
